2003-10-16  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.3.0)

        * IO/VOTable.pm: Fixed VOTable output to actually have some
          meta-data, now readable by treeview.
          
2003-10-13  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.3.0)

        * Added VOTable support (write only) as a pluggable IO module
          along with associated test harness.
          
2003-09-30  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query/Sesame.pm: Modified to cope with change in return
          format by CDS. 
                  
2003-09-24  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query/SIMBAD.pm: Removed debugging statements which 
          generated a file containing a copy of the retrieved HTML in 
          the current working directory.
               
        * etc/sss.cfg: Added SkyCat SuperCOSMOS configuration file to 
          default distribution
        
        * etc/skycat.cfg: Added generic SkyCat configuration file to 
          default distribution   

        * Query/Query/SkyCat.pm: Updated to look for $PERLPREFIX/etc/skycat.cfg
          configuration file by default.
               
        * Makefile.PL: Modified makefile to install the SkyCat configuration
          files to $(PERLPREFIX)/etc in preperation for shifting access to
          SuperCOSMOS from being dependant on Astro::Aladin to using the
          Astro::Catalog::Query::SkyCat module. 
          
        * Query/Query/SuperCOSMOS.pm: Totally reimplemented this module
          from scratch to use the SkyCat.pm module rather than relying
          on the Astro::Aladin implementation. 

        * t/4_skycat_supercos.t: Added a test suite for the new SuperCOSMOS
          module. This superceedes the older 4_supercos.t test suite.

        * MANIFEST: Updated to reflect the actual package, we've been shipping
          V3.x with bits missing since release, whoops!
        
        * old/*: Moved some of the non-functional test suite into a this